--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-
+  <div id="result-modal" class="modal fade centered" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
   <button id="new-game">Crear nueva partida</button>
   <button id="join-game">Unirse a una partida</button>
   <input type="text" name="" id="game-id">
