Hide unselected options

--- a/public/index.html
+++ b/public/index.html
@@ -32,18 +32,18 @@
       <div class="col-12 col-md-6"></div>
       <div class="col-12 col-md-6">
         <h1 class="text-center">¿Piedra, papel ó tijeras?</h1>
-        <div class="options-wrapper d-flex justify-content-between">
+        <div class="options-wrapper d-flex justify-content-center">
           <div class="option-item">
-            <label for="rock">Piedra</label>
             <input id="rock" type="radio" name="option" value="rock" class="option-radio">
+            <label for="rock">Piedra</label>
           </div>
           <div class="option-item">
-            <label for="paper">Papel</label>
             <input id="paper" type="radio" name="option" value="paper" class="option-radio">
+            <label for="paper">Papel</label>
           </div>
           <div class="option-item">
-            <label for="scissors">Tijeras</label>
             <input id="scissors" type="radio" name="option" value="scissors" class="option-radio">
+            <label for="scissors">Tijeras</label>
           </div>
         </div>
         <div id="go-button" class="btn btn-success">Go!</div>
